<resources>
    <string name="app_name">HoI4 Division Designer</string>
    <string name="start">Start</string>
    <string name="infantry">Infantry</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="zero">0</string>
    <string name="calculate">Calculate</string>
    <string name="basics">Basics</string>
    <string name="supply_use">Supply Use</string>
    <string name="weight">Weight</string>
    <string name="suppression">Suppression</string>
    <string name="recovery_rate">Recovery Rate</string>
    <string name="organization">Organization</string>
    <string name="hp">HP</string>
    <string name="speed">Speed</string>
    <string name="combat">Combat</string>
    <string name="soft_attack">Soft Attack</string>
    <string name="hard_attack">Hard Attack</string>
    <string name="defense">Defense</string>
    <string name="breakthrough">Breakthrough</string>
    <string name="piercing">Piercing</string>
    <string name="combat_width">Combat Width</string>
    <string name="hardness">Hardness</string>
    <string name="manpower">Manpower</string>
    <string name="equipment">Equipment</string>
    <string name="production_cost">Production Cost</string>
    <string name="training_time">Training Time</string>
    <string name="artillery">Artillery</string>
    <string name="add_infantry">Add Infantry</string>
    <string name="add_artillery">Add Artillery</string>
    <string name="remove_infantry">Remove Infantry</string>
    <string name="remove_artillery">Remove Artillery</string>
    <string name="anti_air">Anti-Air</string>
    <string name="remove_anti_tank">Remove Anti-Tank</string>
    <string name="add_anti_tank">Add Anti-Tank</string>
    <string name="anti_tank">Anti-Tank</string>
    <string name="air_attack">Air Attack</string>
    <string name="add_inf_battalion">Add Infantry Battalion</string>
    <string name="add_motorized_battalion">Add Motorized Battalion</string>
    <string name="motorized_infantry">Motorized Infantry</string>
    <string name="motorized_artillery">Motorized Artillery</string>
    <string name="motorized_anti_air">Motorized Anti-Air</string>
    <string name="motorized_anti_tank">Motorized Anti-Tank</string>
    <string name="motorized_rocket_artillery">Motorized Rocket Artillery</string>
    <string name="cavalry">Cavalry</string>
    <string name="camel">Camel</string>
    <string name="mechanized_infantry">Mechanized Infantry</string>
    <string name="amtrac_battalion">AMTRAC Battalion</string>
    <string name="armoured_car">Armoured Car</string>
    <string name="rocket_artillery">Rocket Artillery</string>
    <string name="mountaineer">Mountaineer</string>
    <string name="paratrooper">Paratrooper</string>
    <string name="marine">Marine</string>
    <string name="bicycle">Bicycle</string>
    <string name="penal_battalion">Penal Battalion</string>
    <string name="add_battalion">Add Battalion</string>
    <string name="remove_battalion">Remove Battalion</string>
    <string name="fuel_use">Fuel Use</string>
    <string name="fuel_capacity">Fuel Capacity</string>
    <string name="armour">Armour</string>
    <string name="technology_year">Technology Year</string>
    <string name="_1936">1936</string>
    <string name="_1937">1937</string>
    <string name="_1938">1938</string>
    <string name="_1939">1939</string>
    <string name="_1940">1940</string>
    <string name="_1941">1941</string>
    <string name="_1942">1942</string>
    <string name="_1943">1943</string>
    <string name="_1944">1944</string>
    <string name="_1945">1945</string>
    <string name="support_companies">Support Companies</string>
    <string name="engineer">Engineer</string>
    <string name="field_hospital">Field Hospital</string>
    <string name="logistics">Logistics</string>
    <string name="maintenance">Maintenance</string>
    <string name="military_police">Military Police</string>
    <string name="cavalry_recon">Cavalry Recon</string>
    <string name="motorized_recon">Motorized Recon</string>
    <string name="light_armour_recon">Light Armour Recon</string>
    <string name="armoured_recon">Armoured Recon</string>
    <string name="signal">Signal</string>
    <string name="add_armoured_battalion">Add Armoured Battalion</string>
    <string name="light_tank">Light Tank</string>
    <string name="medium_tank">Medium Tank</string>
    <string name="heavy_tank">Heavy Tank</string>
    <string name="super_heavy_tank">Super Heavy Tank</string>
    <string name="modern_tank">Modern Tank</string>
</resources>