<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/header1"
        android:title="@string/_1936" />
    <item
        android:id="@+id/header2"
        android:title="@string/_1937" />
    <item
        android:id="@+id/header3"
        android:title="@string/_1938" />
    <item
        android:id="@+id/header4"
        android:title= "@string/_1939" />
    <item
        android:id="@+id/header5"
        android:title="@string/_1940" />
    <item
        android:id="@+id/header6"
        android:title="@string/_1941" />
    <item
        android:id="@+id/header7"
        android:title="@string/_1942" />
    <item
        android:id="@+id/header8"
        android:title="@string/_1943" />
    <item
        android:id="@+id/header9"
        android:title="@string/_1944" />
    <item
        android:id="@+id/header10"
        android:title="@string/_1945" />
</menu>