<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/header1"
        android:title="@string/motorized_infantry" />
    <item
        android:id="@+id/header2"
        android:title="@string/motorized_artillery" />
    <item
        android:id="@+id/header3"
        android:title="@string/motorized_anti_air" />
    <item
        android:id="@+id/header4"
        android:title= "@string/motorized_anti_tank" />
    <item
        android:id="@+id/header5"
        android:title="@string/motorized_rocket_artillery" />
    <item
        android:id="@+id/header6"
        android:title="@string/cavalry" />
    <item
        android:id="@+id/header7"
        android:title="@string/camel" />
    <item
        android:id="@+id/header8"
        android:title="@string/mechanized_infantry" />
    <item
        android:id="@+id/header9"
        android:title="@string/amtrac_battalion" />
    <item
        android:id="@+id/header10"
        android:title="@string/armoured_car" />
</menu>