<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TemplateActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/h_inf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infantry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/inf_inf_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:dividerPadding="0dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/h_inf">

                <TextView
                    android:id="@+id/inf_inf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/infantry" />

                <TextView
                    android:id="@+id/inf_inf_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/inf_inf_plus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    app:icon="@android:drawable/ic_menu_add"
                    app:iconGravity="textEnd"
                    app:iconPadding="0dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/inf_inf_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    app:icon="@android:drawable/ic_menu_more"
                    app:iconGravity="textEnd"
                    app:iconPadding="0dp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inf_inf_LL">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basics"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/speed" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/organization" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recovery_rate" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/suppression" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/weight" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/supply_use" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Speed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/HP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/Organization"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/RecoveryRate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/Suppression"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/Weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/SupplyUse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/combat"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/soft_attack" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hard_attack" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/defense" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/breakthrough" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/piercing" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/combat_width" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hardness" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/softAttack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/hardAttack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/defense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/breakthrough"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/piercing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/combatWidth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/hardness"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>