<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:dividerPadding="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/batName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/penal_battalion" />

        <TextView
            android:id="@+id/batQuant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/addBat"
            android:layout_width="5dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/plus_7_512"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:contentDescription="@string/add_battalion" />

        <ImageView
            android:id="@+id/delBat"
            android:layout_width="5dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/minus_4_512"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:contentDescription="@string/remove_battalion" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>